# Clone-monkey-type

./: .gitignore  CMakeLists.txt  MT  Makefile
inc/: Config.hpp  Game.hpp  Renderer.hpp  TypingHandler.hpp
src/: Game.cpp  Renderer.cpp  TypingHandler.cpp  main.cpp
